--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -28,24 +28,25 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Inserisci qui le informazioni sul veicolo in vendita da modificare&#46;</p>
+                <p class="pAmm">Attenzione&#58; l&#39;immagine del veicolo non pu&ograve; essere modificata&#46;</p>
                 <form id="modificaVeicoloVendita" onsubmit="return checkForm('modificaVeicoloVendita');" class="formAmm" action="../PHP/salvaVeicoloVenditaModificato.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Veicolo</legend>
-                        <p class="pFormAmm">Ogni campo deve essere compilato&#58; nel caso in cui il campo venga lasciato vuoto&#44; le informazioni precedentemente inserite verranno eliminate&#46;</p>
+                        <p class="pFormAmm">Tutti i campi marcati con l&#39;asterisco &#42; sono obbligatori&#46;</p>
 
-                        <label for="marca">Marca</label>
+                        <label for="marca">Marca &#42;</label>
                         <input type="text" name="marca" id="marca" tabindex="13" />
 
-                        <label for="modello">Modello</label>
+                        <label for="modello">Modello &#42;</label>
                         <input type="text" name="modello" id="modello" tabindex="14" />
 
-                        <label for="km">Chilometri</label>
+                        <label for="km">Chilometri &#42;</label>
                         <input type="text" name="km" id="km" tabindex="15" />
 
-                        <label for="cilindrata">Cilindrata in cm&#179;</label>
+                        <label for="cilindrata">Cilindrata in cm&#179; &#42;</label>
                         <input type="text" name="cilindrata" id="cilindrata" tabindex="16" />
 
-                        <label for="prezzo">Costo in &#8364;</label>
+                        <label for="prezzo">Costo in &#8364; &#42;</label>
                         <input type="text" name="prezzo" id="prezzo" tabindex="17" />
 
                         <input type="submit" id="salvaModificheVeicoloVendita" value="Salva modifiche" tabindex="18" />
