--- a/HTML/listaNoleggiAmministratore.html
+++ b/HTML/listaNoleggiAmministratore.html
@@ -29,7 +29,7 @@
                 <h1 class="h1Amm">Lista dei noleggi prenotati</h1>
                 <listaNoleggi></listaNoleggi>
             </div>
-            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
