--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -58,7 +58,7 @@
                     </fieldset>
                 </form>
             </div>
-            <button aria-label="Torna in cima" onclick="topFunction()" onkeypress="topFunction()" class="hide" id="scrollUp">&#9650;</button>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
