--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -30,7 +30,7 @@
                 <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">Aggiungi veicolo a noleggio</a></p>
                 <veicoliNoleggio></veicoliNoleggio>
             </div>
-            <button aria-label="Torna in cima" onclick="topFunction()" onkeypress="topFunction()" class="hide" id="scrollUp">&#9650;</button>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
