--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -29,7 +29,7 @@
 			<contentItems></contentItems>
 		</div>
 		<p>
-			<button aria-label="Torna in cima" onclick="topFunction()" onkeypress="topFunction()" class="hide" id="scrollUp">&#9650;</button>
+			<button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
 		</p>
     <footer></footer>
   </body>
