aggiunto titolo a print

--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -14,7 +14,8 @@
 		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-  		<script type="text/javascript" src="../JS/controlliClient.js"></script>
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
+		<script type="text/javascript" src="../JS/controlliClient.js"></script>
 		<script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
