--- a/HTML/pagina404.html
+++ b/HTML/pagina404.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
-        <title>Pagina messaggio</title>
+        <title>Pagina 404 not found</title>
         <meta name="title" content="login" />
         <meta name="language" content="italian it" />
 
@@ -17,16 +17,15 @@
     </head>
 
     <body id="bodyPaginaVuota">
-        <div>
         <header></header>
+        <menu></menu>
         <breadcrumb></breadcrumb>
             
         <div id="mainContent">
-            <messaggio></messaggio>
+            <p class="messaggio">Pagina non trovata. Vai al <a href="../PAGES/login.php">login</a> oppure <a href="../PAGES/home.php">torna alla home</a>
         </div>
         
         <footer></footer>
-        </div>
     </body>
 
 </html>
