fix risposta messaggi

--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -30,7 +30,7 @@
                 <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&#46;</p>
                 <form id="rispostaMessaggioAmministartore" onsubmit="return checkForm('rispostaMessaggioAmministartore');" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
                     <fieldset>
-                        <legend>Messaggio</legend>
+                        <legend>Nuovo Messaggio</legend>
                         <p class="pFormAmm">Tutti i campi marcati con l&#39;asterisco &#42; sono obbligatori&#46;</p>
 
                         <label for="oggetto">Oggetto &#42;</label>
