--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -30,6 +30,7 @@
                 <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="13">Modifica informazioni personali</a></p>
                 <infoPersonali></infoPersonali>
             </div>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
