--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -43,6 +43,7 @@
                     </fieldset>
                 </form>
             </div>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
