--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<meta name="title" content="messaggi area personale amministratore" />
 		<meta name="description" content="pagina per la gestione dei messaggi" />
-		<meta name="keywords" content="messaggi, area personale, area amministratore" />
+		<meta name="keywords" content="messaggi, risposte, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
