--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -3,9 +3,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
-		<meta name="title" content="homepage area personale amministratore" />
-		<meta name="description" content="homepage dell'area amministratore del sito" />
-		<meta name="keywords" content="home, area personale, area amministratore" />
+		<meta name="title" content="risposta dell'amministratore ai messaggi" />
+		<meta name="description" content="pagina area amministratore per rispondere ai messaggi" />
+		<meta name="keywords" content="risposta, messaggio, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,7 @@
                         <input type="text" name="oggetto" id="oggetto" tabindex="13" />
 
                         <label for="testo">Messaggio &#42;</label>
-                        <textarea name="testo" id="testo" cols="50" rows="5" tabindex="14"></textarea>
+                        <textarea name="testo" id="testo" cols="30" rows="10" tabindex="14"></textarea>
 
                         <input type="submit" id="salvaRispostaAmm" value="Invia risposta" tabindex="15" />
                     </fieldset>
