--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -3,9 +3,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
-		<meta name="title" content="homepage area personale amministratore" />
-		<meta name="description" content="homepage dell'area amministratore del sito" />
-		<meta name="keywords" content="home, area personale, area amministratore" />
+		<meta name="title" content="lista dei veicoli in vendita" />
+		<meta name="description" content="pagina con tutti i veicoli disponibili alla vendita" />
+		<meta name="keywords" content="veicoli in vendita, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
