fix controlli client JS

--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -40,7 +40,7 @@
                         <label for="cognome">Cognome &#42;</label>
                         <input type="text" name="cognome" id="cognome" tabindex="14" />
 
-                        <label for="telefono">Recapito telefonico</label>
+                        <label for="telefono">Recapito telefonico &#42;</label>
                         <input type="text" name="telefono" id="telefono" tabindex="15" />
 
                         <label for="indirizzo">Indirizzo &#42;</label>
