fix tag name per errori JS

--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -39,8 +39,8 @@
                         <label for="modello">Modello &#42;</label>
                         <input type="text" name="modello" id="modello" tabindex="14" />
 
-                        <label for="km">Chilometri &#42;</label>
-                        <input type="text" name="km" id="km" tabindex="15" />
+                        <label for="chilometri">Chilometri &#42;</label>
+                        <input type="text" name="chilometri" id="chilometri" tabindex="15" />
 
                         <label for="cilindrata">Cilindrata in cm&#179; &#42;</label>
                         <input type="text" name="cilindrata" id="cilindrata" tabindex="16" />
