--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -36,8 +36,8 @@
                         <label for="oggetto">Oggetto &#42;</label>
                         <input type="text" name="oggetto" id="oggetto" tabindex="13" />
 
-                        <label for="testo">Messaggio &#42;</label>
-                        <textarea name="testo" id="testo" cols="30" rows="10" tabindex="14"></textarea>
+                        <label for="messaggio">Messaggio &#42;</label>
+                        <textarea name="messaggio" id="messaggio" cols="30" rows="10" tabindex="14"></textarea>
 
                         <input type="submit" id="salvaRispostaAmm" value="Invia risposta" tabindex="15" />
                     </fieldset>
