--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -14,6 +14,7 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
+        <link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
         <script type="text/javascript" src="../JS/generale.js"></script>
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
 
