--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
+        <link rel="stylesheet" type="text/css" href="../CSS/cssPrintContatti.css" media="print" />
         <script type="text/javascript" src="../JS/generale.js"></script>
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
 
