--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -22,6 +22,7 @@
 		<header></header>
 		<menu></menu>
 		<breadcrumb></breadcrumb>
+    <tagErrore></tagErrore>
 
 		<div class="mainContent">
 			<h1 class='titolo'>AREA PERSONALE</h1>
