fix errori validazione

--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -37,9 +37,9 @@
 					<fieldset>
 						<legend>Inserisci date del noleggio, nel formato gg-mm-aaaa</legend>
 						<label for="dataInizioNolo">Dal</label>
-						<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" class="dataInput"  tabindex="7" />
+						<input id="dataInizioNolo" type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" class="dataInput"  tabindex="7" />
 						<label for="dataFineNolo">Al</label>
-						<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" class="dataInput" tabindex="8" />
+						<input id="dataFineNolo" name="dataFineNolo" type="text" onchange="dataFineChange(event);" class="dataInput" tabindex="8" />
 						<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" tabindex="9" class="hidePrint" />
 					</fieldset>
 				</form>
