--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
-        <title>Informazioni</title>
+        <title>Contatti</title>
         <meta name="title" content="Info" />
         <meta name="description" content="Indicazioni stradali e contatti" />
         <meta name="keywords" content="Concessionaria, auto, Padova, info, contatti" />
