--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -29,7 +29,7 @@
                 <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
                 <messaggiAmministratore></messaggiAmministratore>
             </div>
-            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
+            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
         </div>
         <footer></footer>
     </body>
