--- a/HTML/home.html
+++ b/HTML/home.html
@@ -44,7 +44,7 @@
 			</div>
 
 			<p>
-				<button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp">&#9650;</button>
+				<button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"> <span xml:lang="en" lang="en">TOP</span> </button>
 			</p>
 			
 		</div>
