--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -25,7 +25,7 @@
 		<breadcrumb></breadcrumb>
 
 		<div class="mainContent">
-			<div id="registrationBox" class="outerBox">
+			<div id="registrationBox" class="formBox">
 				<messaggio></messaggio>
 				<h1>Crea il tuo account!</h1>
 				<form id="registrationForm" onsubmit="return checkForm('registrationForm');" action="../PHP/registrazione.php" method="post" >
