--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -31,7 +31,7 @@
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="14">Aggiungi veicolo a noleggio</a></p>
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="15">Aggiungi veicolo in vendita</a></p>
             </div>
-            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
+            <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
         </div>
         <footer></footer>
     </body>
