--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -61,7 +61,7 @@
 			</div>
 			
 			<p>
-                <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
+                <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
             </p>
             
             <footer></footer>
