--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -83,7 +83,7 @@
                 </form>
 
                 <p>
-                    <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp" tabindex="13"><span xml:lang="en" lang="en">TOP</span></button>
+                    <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp" tabindex="13"><span xml:lang="en" lang="en">TOP</span></button>
                 </p>
 
             </div>
