--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -53,7 +53,7 @@
                     </fieldset>
                 </form>
             </div>
-            <button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
+            <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
         </div>
         <footer></footer>
     </body>
