--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -38,7 +38,7 @@
 			</div>
 
 			<p>
-				<button aria-label="Torna in cima" onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
+				<button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
 			</p>
 		</div>
 		<footer></footer>
