aggiunto link skip menù

--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -23,11 +23,12 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         <div id="mainContent" class="corpoAmministratore">
+            <a href="#veroContenuto" tabindex="7" class="linkHidden">Salta men&ugrave; amministratore</a>
             <menuAmministratore></menuAmministratore>
-            <div class="testoAmministratore">
+            <div id="veroContenuto" class="testoAmministratore">
                 <messaggio></messaggio>
                 <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="13">Modifica informazioni personali</a></p>
+                <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="14">Modifica informazioni personali</a></p>
                 <infoPersonali></infoPersonali>
             </div>
             <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
