--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -24,8 +24,9 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         <div id="mainContent" class="corpoAmministratore">
+            <a href="#veroContenuto" tabindex="7" class="linkHidden">Salta men&ugrave; amministratore</a>
             <menuAmministratore></menuAmministratore>
-            <div class="testoAmministratore">
+            <div id="veroContenuto" class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Inserire qui le informazioni personali da modificare&#46;</p>
                 <p class="pAmm">Attenzione&#58; l&#39;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati e la <span xml:lang="en" lang="en">password</span> non possono essere modificati&#46; Inoltre la data di nascita deve essere nel formato gg&#8722;mm&#8722;aaaa</p>
