--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -23,11 +23,11 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         <div id="mainContent" class="corpoAmministratore">
+            <a href="#veroContenuto" tabindex="7" class="linkHidden">Salta men&ugrave; amministratore</a>
             <menuAmministratore></menuAmministratore>
-            <div class="testoAmministratore">
+            <div id="veroContenuto" class="testoAmministratore">
                 <h1 class="h1Amm">Benvenuto<nome></nome>&#33;</h1>
                 <p class="pAmm">Questa &egrave; l&#39;area dedicata ai dipendenti&#44; per la gestione dei veicoli e dei messaggi&#46; Comincia subito&#33;</p>
-                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="13">Vai ai messaggi</a></p>
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="14">Aggiungi veicolo a noleggio</a></p>
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="15">Aggiungi veicolo in vendita</a></p>
             </div>
