--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -24,8 +24,9 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         <div id="mainContent" class="corpoAmministratore">
+            <a href="#veroContenuto" tabindex="7" class="linkHidden">Salta men&ugrave; amministratore</a>
             <menuAmministratore></menuAmministratore>
-            <div class="testoAmministratore">
+            <div id="veroContenuto" class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Inserisci qui le informazioni sul veicolo in vendita da modificare&#46;</p>
                 <p class="pAmm">Attenzione&#58; l&#39;immagine del veicolo non pu&ograve; essere modificata&#46;</p>
