--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -23,11 +23,12 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         <div id="mainContent" class="corpoAmministratore">
+            <a href="#veroContenuto" tabindex="7" class="linkHidden">Salta men&ugrave; amministratore</a>
             <menuAmministratore></menuAmministratore>
-            <div class="testoAmministratore">
+            <div id="veroContenuto" class="testoAmministratore">
                 <messaggio></messaggio>
                 <h1 class="h1Amm">Lista dei veicoli in vendita</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="13">Aggiungi veicolo in vendita</a></p>
+                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="14">Aggiungi veicolo in vendita</a></p>
                 <veicoliVendita></veicoliVendita>
             </div>
             <button onclick="topFunctionMouse()" onkeypress="topFunctionKey(event)" class="hide" id="scrollUp"><span xml:lang="en" lang="en">TOP</span></button>
