--- a/HTML/login.html
+++ b/HTML/login.html
@@ -34,17 +34,17 @@
                   <loginError></loginError>
 
                   <label for="mail">Email</label>
-                  <input type="text" id="mail" name="mail" class="inputArea" tabindex="8" />
+                  <input type="text" id="mail" name="mail" class="inputArea" tabindex="8"/>
 
                   <label for="inputPsw">Password</label>
-                  <input type="password" id="inputPsw" name="password" class="inputArea" tabindex="9" />
+                  <input type="password" id="inputPsw" name="password" class="inputArea" tabindex="9"/>
 
-                  <input type="submit" class="bottoni" value="Login"/>
+                  <input type="submit" class="bottoni" value="Login" tabindex="10"/>
               </fieldset>
 
           </form>
           <div id="registrati">
-              <p class="nuovoAccount">Non hai un account? <a class="linkRapidi" href="registrati.php">Registrati!</a></p>
+              <p class="nuovoAccount">Non hai un account? <a class="linkRapidi" href="registrati.php" tabindex="11">Registrati!</a></p>
           </div>
 
       </div>
