--- a/HTML/pagina404.html
+++ b/HTML/pagina404.html
@@ -22,7 +22,7 @@
         <breadcrumb></breadcrumb>
             
         <div id="mainContent">
-            <p class="messaggio">Pagina non trovata. Vai al <a href="../PAGES/login.php">login</a> oppure <a href="../PAGES/home.php">torna alla home</a>
+            <p class="messaggio">Pagina non trovata. Vai al <a href="../PAGES/login.php" tabindex="9">login</a> oppure <a href="../PAGES/home.php" tabindex="10">torna alla home</a>
         </div>
         
         <footer></footer>
