--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -33,7 +33,6 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.041923095581!2d11.884345815518582!3d45.40849417910036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda586ea23ad3%3A0xf4caaf73601b8ca!2sVia%20Paolotti%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1585019531129!5m2!1sit!2sit" title="Mappa" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
 
-
                 <div id="indirizzo">
                     <div class="titolo"> INDIRIZZI </div>
                     <ul>
@@ -41,7 +40,6 @@
                         <li>Via G.B. Belzoni, 7 - 35121 Padova (Italy) (PD)</li>
                     </ul>
                 </div>
-
 
                 <div id="contatti">
                     <div class="titolo"> CONTATTI </div>
@@ -52,10 +50,10 @@
                     </ul>
                 </div>
 
-                <div id="testo">Puoi contattarci anche utilizzando il form sottostante, un messaggio di risposta verra inviato alla tua area privata il prima possibile.</div>
-
+                <div id="testo">
+                    <p>Puoi contattarci anche utilizzando il form sottostante, un messaggio di risposta verra inviato alla tua area privata il prima possibile.</p>
+                </div>
             </div>
-
                 <messaggio></messaggio>
                 <form id="formMessaggio" onsubmit="return checkForm('formMessaggio');" action="../PHP/invioMessaggio.php"  method="post">
                     <fieldset>
@@ -63,22 +61,21 @@
                         <p id="formText">I campi marcati con * sono obbligatori</p>
 
                         <label for="nome">* Nome</label>
-                        <input type="text" name="nome" class="textbox" id="nome" tabindex="7" />
+                        <input type="text" name="nome" class="textbox" id="nome" tabindex="9"/>
 
                         <label for="cognome">* Cognome</label>
-                        <input type="text" name="cognome" class="textbox" id="cognome" tabindex="8" />
+                        <input type="text" name="cognome" class="textbox" id="cognome" tabindex="10"/>
 
                         <label for="email">* Email</label>
-                        <input type="text" name="email" class="textbox" id="email" tabindex="9" />
+                        <input type="text" name="email" class="textbox" id="email" tabindex="11"/>
 
                         <label for="numeroTelefono">* Numero telefono</label>
-                        <input type="text" name="numeroTelefono" class="textbox" id="numeroTelefono" tabindex="10" />
+                        <input type="text" name="numeroTelefono" class="textbox" id="numeroTelefono" tabindex="12"/>
 
                         <label for="messaggio">* Messaggio</label>
-                        <textarea name="messaggio" class="textbox" id="messaggio" tabindex="11" cols="50" rows="5" ></textarea>
+                        <textarea name="messaggio" class="textbox" id="messaggio" tabindex="13" cols="50" rows="5"></textarea>
 
-                        <input type="submit" id="inviaMessaggio" value="INVIA" tabindex="12" />
-
+                        <input type="submit" id="inviaMessaggio" value="Invia" tabindex="14"/>
                     </fieldset>
                 </form>
 
@@ -88,8 +85,6 @@
 
             </div>
             <footer></footer>
-
-
 
     </body>
 </html>
