--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -11,7 +11,7 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
+		<link rel="icon" type="images/png" href="../Images/logoGREG.png"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
