--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -13,7 +13,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
+		<link rel="icon" type="images/png" href="../Images/logoGREG.png"/>
 		
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
