--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Veicoli A Noleggio &#124; Area Amministratore</title>
-        <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
+        <link rel="icon" type="images/png" href="../Images/logoGREG.png"/>
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
         <link rel="stylesheet" type="text/css" media="handheld, screen and (max-width:1000px), only screen and (max-device-width:1000px)" href="../CSS/cssAmmMobile.css"/>
