sistemato richiesta preventivo

--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -29,6 +29,9 @@
 
 		<menu></menu>
 		<breadcrumb></breadcrumb>
+
+		<!--MESSAGEPLACEHOLDER-->
+		
 		<div id="mainContent">
 			<div id="filtri">
 				<filtriAuto></filtriAuto>
