tolti controlli da login

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -27,7 +27,7 @@
     <div class="mainContent">
       <div class="formBox" >
           <h1 class="titolo">Accedi al tuo account</h1>
-          <form id="loginForm" onsubmit="return checkForm('loginForm');" action="../PHP/accessoLogin.php" method="post">
+          <form id="loginForm"  action="../PHP/accessoLogin.php" method="post">
               <fieldset>
                   <legend>Email e password</legend>
 
