--- a/HTML/home.html
+++ b/HTML/home.html
@@ -14,6 +14,8 @@
 		<link rel="icon" type="images/png" href="../Images/logoGREG.png"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
 		<script src="../JS/generale.js" type="text/javascript"></script> 
 	</head>
